--- a/config.toml
+++ b/config.toml
@@ -26,7 +26,7 @@ disqusShortname = ""
   # Link custom assets relative to /static
   custom_css = []
   custom_js  = []
-  favicon    = "favicon.jpg"
+  favicon    = "img/favicon.jpg"
 
   # Just a custom image variable, please define it in .md files for content.
   image = ""
