--- a/config.toml
+++ b/config.toml
@@ -106,7 +106,7 @@ disqusShortname = ""
     [[params.tiles.showcase]]
       title = "Our Mission"
       subtitle = "Our mission is to educate the the public and high schoolers about refugee issues."
-      image = "backgrounds/7.jpg"
+      image = "backgrounds/7.webp"
       url = "/chapter-program"
 
     [[params.tiles.showcase]]
