--- a/config.toml
+++ b/config.toml
@@ -56,10 +56,6 @@ disqusShortname = ""
       url = "/podcast"
 
     [[params.navigation.links]]
-      name = "Chapter Program"
-      url = "/chapter-program"
-
-    [[params.navigation.links]]
         name = "Who We Are"
         url = "/who-we-are"
 
@@ -105,9 +101,9 @@ disqusShortname = ""
     
     [[params.tiles.showcase]]
       title = "Our Mission"
-      subtitle = "Our mission is to educate the the public and high schoolers about refugee issues."
+      subtitle = "Our mission is to educate people about refugee issues."
       image = "backgrounds/7.webp"
-      url = "/chapter-program"
+      url = "/mission"
 
     [[params.tiles.showcase]]
       title = "Who We Are"
